// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders checked 1`] = `
.gLVrHx {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #000;
  border-radius: 4px;
  background-color: #fff;
  width: 12px;
  height: 12px;
  font-size: 12px;
}

<span
  checked={true}
  className="sc-bdVaJa gLVrHx"
  disabled={undefined}
  size={undefined}
>
  <svg
    height="7"
    viewBox="0 0 9 7"
    width="9"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      P
    </title>
    <path
      d="M8.807.477A.625.625 0 0 0 8.35.283a.57.57 0 0 0-.44.194L3.217 5.17 1.09 3.043a.596.596 0 0 0-.44-.176.657.657 0 0 0-.457.176A.625.625 0 0 0 0 3.5c0 .176.064.328.193.457L2.76 6.523a.625.625 0 0 0 .457.194.57.57 0 0 0 .44-.194l5.15-5.15a.615.615 0 0 0 0-.896z"
      fill="#2F333D"
      fillRule="evenodd"
    />
  </svg>
</span>
`;

exports[`<Checkbox /> renders disabled 1`] = `
.hTZnim {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #999;
  border-radius: 4px;
  background-color: #f3f3f3;
  width: 12px;
  height: 12px;
  font-size: 12px;
}

<span
  checked={undefined}
  className="sc-bdVaJa hTZnim"
  disabled={true}
  size={undefined}
/>
`;

exports[`<Checkbox /> renders larger 1`] = `
.hnoCGB {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #999;
  border-radius: 4px;
  background-color: #fff;
  width: 14px;
  height: 14px;
  font-size: 14px;
}

<span
  checked={undefined}
  className="sc-bdVaJa hnoCGB"
  disabled={undefined}
  size="large"
/>
`;

exports[`<Checkbox /> renders styled span element with hidden input 1`] = `
.ldAYDL {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #999;
  border-radius: 4px;
  background-color: #fff;
  width: 12px;
  height: 12px;
  font-size: 12px;
}

<span
  checked={undefined}
  className="sc-bdVaJa ldAYDL"
  disabled={undefined}
  size={undefined}
>
  <input
    name="test"
    onClick={[Function]}
    type="hidden"
    value={undefined}
  />
</span>
`;
